--- a/package.json
+++ b/package.json
@@ -18,7 +18,15 @@
     "@angular/platform-browser": "^14.2.0",
     "@angular/platform-browser-dynamic": "^14.2.0",
     "@angular/router": "^14.2.0",
+    "@types/jquery": "^3.5.25",
+    "bootstrap": "^5.3.2",
+    "chart.js": "^3.8.0",
+    "chartjs-plugin-datalabels": "^2.2.0",
+    "jquery": "^3.7.1",
+    "ng2-charts": "^3.1.0",
+    "ngx-pagination": "^6.0.3",
     "rxjs": "~7.5.0",
+    "sweetalert2": "^11.7.1",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
   },
